--- a/public/app.css
+++ b/public/app.css
@@ -51,7 +51,7 @@
         0px 15.8588px 33.5045px rgba(56, 1, 1, 0.0417275),
         0px 8.8903px 18.7823px rgba(56, 1, 1, 0.035),
         0px 4.72157px 9.97515px rgba(56, 1, 1, 0.0282725),
-        0px 1.96475px 4.15088px rgba(56, 1, 1, 0.0196802);
+        0px 1.96475px 4.15088px rgba(56, 1, 1, 0.0196802) !important;
 }
 .btn-4:hover {
     color: #fff !important;
@@ -114,6 +114,10 @@
     border: none !important;
     background-color: #f1f1f1 !important;
     color: #000 !important;
+}
+
+.card {
+    border: none !important;
 }
 /* admin */
 /* sidebar */
