--- a/public/app.css
+++ b/public/app.css
@@ -15,6 +15,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif !important;
+    letter-spacing: 0.7px;
 }
 /* home */
 
